cambio en la tabla, tiene paginación y cambié los props de los headers de la tabla

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+    <script src="https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table.min.js" />
+    <link rel="stylesheet" href="https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table-all.min.css">
+</link>
     <script>
       (() => {
         if (process?.env?.NODE_ENV !== 'development') {
